--- a/server/resources/[Resources]/vrp_shops/web-side/css.css
+++ b/server/resources/[Resources]/vrp_shops/web-side/css.css
@@ -1,29 +1,30 @@
-::-webkit-scrollbar { display: none; }
+::-webkit-scrollbar { width: 5px; }
+::-webkit-scrollbar-track { background: rgba(255,255,255,0.3); }
+::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.3); }
+::-webkit-scrollbar-thumb:hover { background: rgba(255,255,255,0.5); }
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button { -webkit-appearance: none; }
 
 body {
-	padding: 0;
 	margin: 0;
+	padding: 0;
 	color: #fff;
-	font-family: 'Roboto', Arial, Helvetica, sans-serif;
+	font-family: "Roboto",Arial,Helvetica,sans-serif;
 }
 
 * {
 	overflow: hidden;
-	box-sizing: border-box;
 	user-select: none;
+	box-sizing: border-box;
 }
 
 .inventory {
-	display: none;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-
-	height: 100vh;
 	width: 100vw;
-
+	height: 100vh;
+	display: none;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
 	background: rgba(0,0,0,0.5);
 }
 
@@ -33,45 +34,44 @@ body {
 }
 
 .sections {
-	height: 415px;
+	height: 369px;
 	display: flex;
 }
 
 .invLeft, .invRight {
-	overflow-y: scroll;
+	row-gap: 3px;
 	display: grid;
-	grid-template-columns: 1fr 1fr  1fr 1fr 1fr;
-	column-gap: 5px;
-	row-gap: 5px;
+	column-gap: 3px;
+	overflow-y: scroll;
+	padding-right: 3px;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
 .item {
+	width: 100px;
 	display: flex;
+	height: 120px;
 	flex-direction: column;
-
-	/* width: 110px;
-	height: 135px; */
-    width: 112px;
-    height: 132px;
-    background: rgba(0, 0, 0, 0.25);
-	border: 1px solid rgba(255, 255, 255, 0.25);
+	text-shadow: 1px 1px #000;
+	background: rgba(255,255,255,0.1);
+	border: 1px solid rgba(255,255,255,0.12);
 }
 
 .populated {
-	background-size: 90% !important;
+	background-size: 94% !important;
 	background-position: center !important;
 	background-repeat: no-repeat !important;
 }
 
 .populated:hover, .hoverControl {
-	background-color: #1f1f1fb9 !important;
+	background-color: rgba(200,200,200,0.24) !important;
 }
 
 .item .top {
 	display: flex;
-	justify-content: space-between;
-	font-size: .65rem;
 	color: #8c8c8c;
+	font-size: .65rem;
+	justify-content: space-between;
 }
 
 .itemAmount {
@@ -97,16 +97,13 @@ body {
 	text-overflow: ellipsis;
 	text-transform: uppercase;
 
-	text-shadow: 1px 1px #000;
-	background-image: url('https://cdn.discordapp.com/attachments/734975009914880048/793610856738717726/bottom.png');
-    background-position: bottom;
-    background-repeat: no-repeat;
+	background: rgba(19,22,28,0.5);
 }
 
 .invMiddle {
 	display: flex;
-	flex-direction: column;
 	align-items: center;
+	flex-direction: column;
 }
 
 .invMiddle div {
@@ -114,8 +111,7 @@ body {
 	text-align: center;
 
 	border: 1px solid rgba(255,255,255,0.12);
-	background: rgba(0, 0, 0, 0.80);
-    opacity: 0.5;
+	background: rgba(255,255,255,0.05);
 	letter-spacing: 1px;
 
 	width: 70%;
@@ -124,21 +120,133 @@ body {
 }
 
 .invMiddle input {
+	padding: 16px 4px;
 	font-size: .75rem;
 	letter-spacing: 1px;
+	background: rgba(255,255,255,0.05);
 	border: 1px solid rgba(255,255,255,0.12);
-    background: rgba(0, 0, 0, 0.80);
-    opacity: 0.5;
-	padding: 16px 4px;
 }
 
 .invMiddle input, .invMiddle input::placeholder {
-	text-align: center;
-	appearance: none;
+	width: 70%;
+	color: #fff;
 	outline: none;
 	border-radius: 0;
-	width: 70%;
-	color: #FFF;
+	appearance: none;
+	text-align: center;
+}
+
+#weight {
+	max-width: 520px;
+}
+
+#weightTextLeft {
+	float: left;
+	color: #9c9c9c;
+	font-size: 11px;
+	min-width: 510px;
+	max-width: 510px;
+	text-align: right;
+	margin-right: 10px;
+	margin-bottom: 10px;
+	letter-spacing: 1px;
+}
+
+#weightBarLeft {
+	float: left;
+	min-height: 8px;
+	max-height: 8px;
+	min-width: 520px;
+	max-width: 520px;
+	background: #40475c;
+	margin-bottom: 5px;
+}
+
+#weightTextRight {
+	float: right;
+	color: #9c9c9c;
+	font-size: 11px;
+	min-width: 510px;
+	max-width: 510px;
+	text-align: left;
+	margin-left: 10px;
+	margin-bottom: 10px;
+	letter-spacing: 1px;
+}
+
+#weightBarRight {
+	float: right;
+	min-height: 8px;
+	max-height: 8px;
+	min-width: 520px;
+	max-width: 520px;
+	background: #40475c;
+	margin-bottom: 5px;
+}
+
+#weightContent {
+	float: left;
+	min-height: 8px;
+	max-height: 8px;
+	max-width: 520px;
+	background: #737da0;
+	transition: all 0.9s;
+}
+
+.ui-helper-hidden-accessible {
+	display: none;
+}
+
+.ui-tooltip {
+	padding: 15px;
+	z-index: 9999;
+	color: #d6d9df;
+	font-size: 11px;
+	position: absolute;
+	background: #262a38;
+	letter-spacing: 1px;
+}
+
+.ui-tooltip:hover {
+	display: none;
+}
+
+.ui-tooltip item {
+	float: left;
+	font-size: 14px;
+	min-width: 200px;
+	letter-spacing: 2px;
+	font-family: Arial,Helvetica,sans-serif;
+}
+
+.ui-tooltip legenda {
+	float: left;
+	min-width: 200px;
+	margin-top: 10px;
+	padding-top: 6px;
+	line-height: 20px;
+	letter-spacing: 2px;
+	border-top: 1px solid #40475c;
+	font-family: Arial,Helvetica,sans-serif;
+}
+
+.ui-tooltip description {
+	float: left;
+	color: #626977;
+	font-size: 10px;
+	max-width: 200px;
+	margin-top: 10px;
+	font-family: Arial,Helvetica,sans-serif;
+}
+
+.ui-tooltip s {
+	color: #494f5a;
+	padding: 0 5px;
+	text-decoration: none;
+}
+
+.ui-tooltip r {
+	color: #626977;
 }
 
 .myInfos {
@@ -154,7 +262,7 @@ body {
 
 .infosContent span {
 	letter-spacing: 1px;
-	margin-right: 18px;
+	margin-right: 16px;
 }
 
 .myInfos b {
@@ -168,16 +276,7 @@ body {
 }
 
 .myInfos s {
-	color: #f0f0f0;
+	color: #92c3ff;
+	font-weight: 500;
 	text-decoration: none;
-}
-
-.slotNumber {
-	width: 24px;
-	height: 24px;
-	padding: 6px 0 0;
-	font-size: 0.6rem;
-	text-align: center;
-	color: rgba(19,22,28,1.0);
-	background: rgba(255,255,255,0.75);
 }
