--- a/server/resources/[Resources]/vrp_notify/web-side/style.css
+++ b/server/resources/[Resources]/vrp_notify/web-side/style.css
@@ -171,6 +171,51 @@ body {
 	transition: transform 1s ease 0s, opacity 1s ease 0s;
 }
 
+#life-hospital1 {
+	float: left;
+	padding: 7px 10px 7px 35px;
+ 	line-height: 20px;
+ 	margin: 10px 5px 0px;
+	background: url(imgs/heart-pulse.png) 4px center no-repeat #251624;
+	color: #f3f3f3;
+	font-size: 12px;
+	border-radius: 5px;
+	box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 5px, rgba(0, 0, 0, 0.14) 0px 2px 2px, rgba(0, 0, 0, 0.12) 0px 3px 1px -2px;
+	pointer-events: all;
+	z-index: 9500;
+	transition: transform 1s ease 0s, opacity 1s ease 0s;
+}
+
+#life-hospital2 {
+	float: left;
+	padding: 7px 10px 7px 35px;
+ 	line-height: 20px;
+ 	margin: 10px 5px 0px;
+	background: url(imgs/heart-pulse.png) 4px center no-repeat #0d47a1;
+	color: #f3f3f3;
+	font-size: 12px;
+	border-radius: 5px;
+	box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 5px, rgba(0, 0, 0, 0.14) 0px 2px 2px, rgba(0, 0, 0, 0.12) 0px 3px 1px -2px;
+	pointer-events: all;
+	z-index: 9500;
+	transition: transform 1s ease 0s, opacity 1s ease 0s;
+}
+
+#life-hospital3 {
+	float: left;
+	padding: 7px 10px 7px 35px;
+ 	line-height: 20px;
+ 	margin: 10px 5px 0px;
+	background: url(imgs/heart-pulse.png) 4px center no-repeat #21a540;
+	color: #f3f3f3;
+	font-size: 12px;
+	border-radius: 5px;
+	box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 5px, rgba(0, 0, 0, 0.14) 0px 2px 2px, rgba(0, 0, 0, 0.12) 0px 3px 1px -2px;
+	pointer-events: all;
+	z-index: 9500;
+	transition: transform 1s ease 0s, opacity 1s ease 0s;
+}
+
 #damage-water {
 	float: left;
 	padding: 7px 10px 7px 35px;
