--- a/server/resources/[Resources]/crafting/web-side/css.css
+++ b/server/resources/[Resources]/crafting/web-side/css.css
@@ -1,4 +1,4 @@
-::-webkit-scrollbar { display: none; }
+::-webkit-scrollbar { width: 6px; }
 ::-webkit-scrollbar-track { background: rgba(26,27,30,0.8); border-radius: 4px; }
 ::-webkit-scrollbar-thumb { background: #3f455c; border-radius: 4px; }
 ::-webkit-scrollbar-thumb:hover { background: #3f455c; }
@@ -22,10 +22,11 @@ body {
 	width: 100vw;
 	height: 100vh;
 	display: none;
+	position: fixed;
 	align-items: center;
 	flex-direction: column;
 	justify-content: center;
-	background: rgba(0,0,0,0.5);
+	background: rgba(0,0,0,0.55);
 }
 
 .innerInventory {
@@ -34,7 +35,7 @@ body {
 }
 
 .sections {
-	height: 369px;
+	height: 589px;
 	display: flex;
 }
 
@@ -48,8 +49,8 @@ body {
 }
 
 .item {
-	width: 100px;
-	height: 120px;
+	width: 115px;
+	height: 145px;
 	display: flex;
 	border-radius: 4px;
 	flex-direction: column;
@@ -81,18 +82,17 @@ body {
 	margin: 15px 0 0 15px;
 }
 
-.item .itemname {
-	margin-top: auto;
+.item .nameItem {
 	align-self: center;
 
 	width: 100%;
 	color: #d0d0d0;
-	padding: 7px 10px;
 
-	letter-spacing: 1px;
+	padding: 8px 10px;
 	font-size: .68rem;
 	text-align: center;
 	white-space: nowrap;
+	letter-spacing: 1px;
 	text-overflow: ellipsis;
 	text-transform: uppercase;
 
@@ -102,14 +102,28 @@ body {
 .item .durability {
 	width: 100%;
 	height: 3px;
-  /*margin-top: auto;*/
+	margin-top: auto;
 	background: #2e6e4c;
+}
+
+.item .invisibledurability {
+	width: 100%;
+	height: 3px;
+	margin-top: auto;
 }
 
 .invMiddle {
 	display: flex;
 	align-items: center;
 	flex-direction: column;
+}
+
+input {
+	text-align: center;
+}
+
+input::placeholder {
+	color: #afb8d2;
 }
 
 .invMiddle div, .invMiddle input {
@@ -126,14 +140,6 @@ body {
 	background: rgba(64,71,92,0.75);
 }
 
-input {
-	text-align: center;
-}
-
-input::placeholder {
-	color: #afb8d2;
-}
-
 #weight {
 	max-width: 596px;
 }
@@ -142,8 +148,8 @@ input::placeholder {
 	float: left;
 	color: #9c9c9c;
 	font-size: 12px;
-	min-width: 512px;
-	max-width: 512px;
+	min-width: 580px;
+	max-width: 580px;
 	text-align: right;
 	margin-right: 15px;
 	border-radius: 4px;
@@ -155,8 +161,8 @@ input::placeholder {
 	float: left;
 	min-height: 10px;
 	max-height: 10px;
-	min-width: 512px;
-	max-width: 512px;
+	min-width: 596px;
+	max-width: 596px;
 	margin-bottom: 5px;
 	border-radius: 4px;
 	background: #3f455c;
