--- a/server/resources/[Resources]/homes/web-side/css.css
+++ b/server/resources/[Resources]/homes/web-side/css.css
@@ -1,222 +1,240 @@
-body,td,th { font-size: 11px; font-family: arial; color: #a9a9a9; cursor: default; vertical-align: baseline; outline: 0; line-height: 1; margin: 0; padding: 0; word-wrap: break-word; }
-a,a:link,a:visited,a:active,a:hover { font-family: arial; font-size: 11px; color: #a9a9a9; text-decoration: none; }
-div,span,applet,object,iframe,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr { border:0; outline:0; font-size:100%; vertical-align:baseline; background:transparent; margin:0; padding:0; }
-:focus { outline: 0; }
-img { border: none; }
-::-webkit-scrollbar { width: 5px; }
-::-webkit-scrollbar-track { background: rgba(255,255,255,0.3); }
-::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.3); }
-::-webkit-scrollbar-thumb:hover { background: rgba(255,255,255,0.6); }
+::-webkit-scrollbar { width: 6px; }
+::-webkit-scrollbar-track { background: rgba(26,27,30,0.8); border-radius: 4px; }
+::-webkit-scrollbar-thumb { background: #3f455c; border-radius: 4px; }
+::-webkit-scrollbar-thumb:hover { background: #3f455c; }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button { -webkit-appearance: none; }
 
-#body {
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+body {
+	margin: 0;
+	padding: 0;
+	color: #fff;
+	font-family: "Roboto",Arial,Helvetica,sans-serif;
+}
+
+* { overflow: hidden; user-select: none; 
+    box-sizing: border-box; 
+}
+    
+.inventory {
+	width: 100vw;
+	height: 100vh;
 	display: none;
-  background: rgba(0,0,0,0.5);
-  user-select: none;
+	position: fixed;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+	background: rgba(0,0,0,0.55);
 }
 
-#inventory {
-	top: 50%;
-	left: 50%;
-	height: 610px;
-	width: 1400px;
-	overflow: hidden;
-	position: absolute;
-	transform: translate(-50%,-50%);
-}
-
-#myInfos {
-	float: left;
-	padding: 25px;
-	min-width: 1400px;
-	max-width: 1400px;
-	margin-bottom: 5px;
-}
-
-#myInfos b {
-	color: #fff;
-	display: block;
-	font-size: 24px;
-	padding-bottom: 15px;
-}
-
-#myInfos s {
-	color: #ffc937;
-	font-weight: 700;
-	text-decoration: none;
-}
-
-#myInfos i {
-	color: #b3b3b3;
-	font-weight: 300;
-}
-
-#myInfosContent {
+.innerInventory {
 	display: flex;
-	min-width: 570px;
-	max-width: 570px;
-	justify-content: space-between;
+	flex-direction: column;
 }
 
-#invweight {
-	float: left;
-	min-height: 5px;
-	max-height: 5px;
-	min-width: 1400px;
-	max-width: 1400px;
-	margin-bottom: 5px;
+.sections {
+	height: 589px;
+	display: flex;
 }
 
-#myWeight {
-	float: left;
-	min-height: 5px;
-	max-height: 5px;
-	min-width: 620px;
-	max-width: 620px;
-	background: #9b7a1f;
+#invleft, #invright { 
+    gap: 3px; 
+    display: grid; 
+    overflow-y: scroll; 
+    padding-right: 3px;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr; 
 }
 
-#chestWeight {
-	float: left;
-	min-height: 5px;
-	max-height: 5px;
-	min-width: 620px;
-	max-width: 620px;
-	background: #9b7a1f;
-	margin-left: 150px;
-}
-
-#myWeightContent, #chestWeightContent {
-	float: left;
-	min-height: 5px;
-	max-height: 5px;
-	max-width: 620px;
-	background: #ffc937;
-}
-
-#invleft {
-	float: left;
-	overflow-x: auto;
-	min-width: 630px;
-	max-width: 630px;
-	min-height: 495px;
-	max-height: 495px;
-}
-
-.item, .item2 {
-	float: left;
-	width: 120px;
-	height: 120px;
-	margin-right: 5px;
-	margin-bottom: 5px;
-	background: rgba(255,255,255,0.15);
-	box-shadow: inset 0 0 1px 1px rgba(255,255,255,0.3);
-}
-
-#peso {
-	float: left;
-	width: 35px;
-	height: 30px;
-	font-size: 10px;
-	text-align: left;
-	padding: 15px 0 0 15px;
+.item { 
+	width: 115px;
+	height: 145px;
+	display: flex;
+	border-radius: 4px;
+	flex-direction: column;
 	text-shadow: 1px 1px #000;
+	background: rgba(26,27,30,0.50);
 }
 
-#quantity {
-	float: left;
-	width: 55px;
-	height: 30px;
-	font-size: 10px;
-	text-align: right;
-	padding: 15px 15px 0 0;
-	text-shadow: 1px 1px #000;
-}
-
-#itemname {
-	color: #fff;
-	float: left;
-	width: 102px;
-	overflow: hidden;
-	text-align: center;
-	margin: 44px 1px 0;
-	white-space: nowrap;
-	letter-spacing: 1.5px;
-	padding: 10px 8px 6px;
-	text-overflow: ellipsis;
-	text-transform: uppercase;
-	text-shadow: 1px 1px #000;
-	background: rgba(0,0,0,0.3);
-}
-
-#nonebility {
-	float: left;
-	height: 3px;
-	width: 118px;
-	margin-left: 1px;
-	background: rgba(0,0,0,0.3);
-}
-
-#durability {
-	float: left;
-	height: 3px;
-	width: 118px;
-	margin-left: 1px;
-	background: #1a8547;
-}
-
-#durability2 {
-	float: left;
-	height: 3px;
-	background: #2eb969;
-}
-
-#invmiddle {
-	float: left;
-	margin: 0 10px;
-	min-height: 55px;
-	max-height: 495px;
-}
-
-#invmiddle input, #invmiddle input::placeholder {
-	border: 0;
-	color: #fff;
-	padding: 18px 0;
-	background: rgba(255,255,255,0.10);
-}
-
-#middleButton {
-	color: #fff;
-	width: 120px;
-	padding: 19px 0;
-	font-size: 12px;
-	text-align: center;
-	letter-spacing: 2px;
-	margin-bottom: 5px;
-	text-shadow: 1px 1px #000;
-	box-shadow: inset 0 0 1px 1px rgba(255,255,255,0.3);
-}
-
-.amount {
-  user-select: none; 
-}
-
-.use, .submit, .drop {
-	background: rgba(255,255,255,0.15);
-}
-
-#invright {
-	float: left;
-	overflow-x: auto;
-	min-width: 630px;
-	max-width: 630px;
-	min-height: 495px;
-	max-height: 495px;
+.populated {
+	background: rgba(25,28,35,0.75);
+	background-size: 86% !important;
 }
 
 .populated:hover, .hoverControl {
-	background: rgba(200,200,200,0.5);
+	background: #30354a;
+}
+
+.top { 
+	display: flex;
+	color: #8c8c8c;
+	font-size: .70rem;
+	justify-content: space-between;
+}
+
+.itemAmount {
+	margin: 15px 15px 0 0;
+}
+
+.itemWeight {
+	margin: 15px 0 0 15px;
+}
+
+.item .nameItem { 
+	margin-top: auto;
+	align-self: center;
+	width: 100%;
+	color: #d0d0d0;
+	padding: 8px 10px;
+	font-size: .68rem;
+	text-align: center;
+	white-space: nowrap;
+	letter-spacing: 1px;
+	text-overflow: ellipsis;
+	text-transform: uppercase;
+	background: rgba(71,79,106,0.5);
+}
+
+.item .durability {
+	width: 100%;
+	height: 3px;
+	margin-top: auto;
+	background: #2e6e4c;
+}
+.invMiddle {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+
+input {
+	text-align: center;
+}
+
+input::placeholder {
+	color: #afb8d2;
+}
+
+.invMiddle div, .invMiddle input {
+	border: 0;
+	width: 70%;
+	outline: none;
+	color: #afb8d2;
+	padding: 16px 0;
+	font-size: 12px;
+	text-align: center;
+	border-radius: 4px;
+	margin-bottom: 12px;
+	letter-spacing: 1px;
+	background: rgba(64,71,92,0.75);
+}
+
+#weight { 
+	max-width: 1338px;
+}
+#weightTextLeft {
+	float: left;
+	color: #9c9c9c;
+	font-size: 12px;
+	min-width: 580px;
+	max-width: 580px;
+	text-align: right;
+	margin-right: 15px;
+	border-radius: 4px;
+	margin-bottom: 15px;
+	letter-spacing: 1px;
+}
+#weightBarLeft {
+	float: left;
+	min-height: 10px;
+	max-height: 10px;
+	min-width: 596px;
+	max-width: 596px;
+				   
+	margin-bottom: 5px;
+	border-radius: 4px;
+	background: #3f455c;
+					  
+}
+#weightTextRight {
+	float: right;
+	color: #9c9c9c;
+	font-size: 12px;
+	min-width: 580px;
+	max-width: 580px;
+	text-align: left;
+	margin-left: 15px;
+	border-radius: 4px;
+	margin-bottom: 15px;
+	letter-spacing: 1px;
+}
+#weightBarRight {
+	float: right;
+	min-height: 10px;
+	max-height: 10px;
+	min-width: 596px;
+	max-width: 596px;
+	border-radius: 4px;
+	margin-bottom: 5px;
+	background: #3f455c;
+}
+#weightContent {
+	float: left;
+	min-height: 10px;
+	max-height: 10px;
+	max-width: 596px;
+	border-radius: 4px;
+	background: #737ea0;
+	transition: all 0.9s;
+}
+.ui-helper-hidden-accessible { 
+    display: none; 
+}
+
+.ui-tooltip {
+	z-index: 9999;
+	color: #d6d9df;
+	font-size: 11px;
+	border-radius: 4px;
+	position: absolute;
+	background: #212430;
+	letter-spacing: 1px;
+	padding: 20px 20px 15px;
+}
+
+.ui-tooltip:hover { 
+    display: none; 
+}
+
+.ui-tooltip item {
+	float: left;
+	font-size: 14px;
+	min-width: 200px;				   
+	letter-spacing: 2px;
+}
+
+.ui-tooltip legenda {
+	float: left;
+	min-width: 200px;
+	margin-top: 10px;
+	padding-top: 6px;
+	line-height: 20px;
+	letter-spacing: 2px;
+	border-top: 1px solid #40475c;
+}
+
+.ui-tooltip description {
+	float: left;
+	color: #626977;
+	font-size: 10px;
+	max-width: 200px;
+	margin-top: 10px;
+}
+.ui-tooltip s {
+	color: #494f5a;
+	padding: 0 5px;
+	text-decoration: none;
+}
+
+.ui-tooltip r {
+	color: #626977;
 }
