--- a/server/resources/[vrp]/taskbar/web-side/css.css
+++ b/server/resources/[vrp]/taskbar/web-side/css.css
@@ -9,7 +9,11 @@
 	letter-spacing: 3.5px;
 	color: rgba(255,255,255,0.7);
 	text-shadow: 1px 1px rgba(0,0,0,0.7);
-	font-family: Arial,Helvetica,sans-serif;
+	font-family: "Roboto",Arial,Helvetica,sans-serif;
+}
+
+.nicesexytext b {
+	font-weight: 300;
 }
 
 .divwrap {
