--- a/server/resources/[Essentials]/vrp/loading/style.css
+++ b/server/resources/[Essentials]/vrp/loading/style.css
@@ -32,7 +32,7 @@ body {
 
 .contact {
 	display: flex;
-	flex-direction: column;
+	/*flex-direction: column;*/
 	justify-content: center;
 	align-items: center;
 }
