--- a/server/resources/[vrp]/barbershop/web-side/style.css
+++ b/server/resources/[vrp]/barbershop/web-side/style.css
@@ -26,22 +26,24 @@ input[type=range]::-webkit-slider-thumb {
 	-webkit-appearance: none;
 	height: 12px;
 	width: 12px;
-	background: #ffffff;
+	background: #424242;
 	cursor: pointer;
 	margin-top: -6px;
+	border-radius: 4px;
 }
 
 input[type=range]::-moz-range-thumb {
 	height: 12px;
 	width: 12px;
-	background: #ffffff;
+	background: #424242;
+	border-radius: 4px;
 	cursor: pointer;
 }
 
 input[type=range]::-ms-thumb {
 	height: 12px;
 	width: 12px;
-	background: #ffffff;
+	background: #fff;
 	cursor: pointer;
 }
 
@@ -49,17 +51,18 @@ input[type=range]::-webkit-slider-runnable-track {
 	width: 330px;
 	height: 2px;
 	cursor: pointer;
-	background: rgba(255,255,255,0.2);
+	background: #666;
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
-	background: rgba(255,255,255,0.2); }
+	background: #666;
+}
 
 input[type=range]::-moz-range-track {
 	width: 330px;
 	height: 2px;
 	cursor: pointer;
-	background: rgba(255,255,255,0.2);
+	background: #656e8d;
 }
 
 input[type=range]::-ms-track {
@@ -72,19 +75,19 @@ input[type=range]::-ms-track {
 }
 
 input[type=range]::-ms-fill-lower {
-	background: rgba(255,255,255,0.2);
+	background: #656e8d;
 }
 
 input[type=range]:focus::-ms-fill-lower {
-	background: rgba(255,255,255,0.2);
+	background: #656e8d;
 }
 
 input[type=range]::-ms-fill-upper {
-	background: rgba(255,255,255,0.2);
+	background: #656e8d;
 }
 
 input[type=range]:focus::-ms-fill-upper {
-	background: rgba(255,255,255,0.2);
+	background: #656e8d;
 }
 
 input[type="radio"] {
@@ -171,30 +174,30 @@ body {
 }
 
 .openBarbershop {
-	display: none;
-	position: absolute;
-	width: 420px;
-	min-height: 100%;
+	top: 0;
+	right: 0;
 	height: 0px;
-	color: rgba(255,255,255,0.5);
-	top: 0px;
-	right: 0px;
+	width: 420px;
+	display: none;
+	color: #c0c0c0;
+	min-height: 100%;
+	position: absolute;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
-	background-color: rgba(24,27,32,0.9);
+	background: #323644;
 	overflow: hidden;
 }
 
 form {
 	width: 100%;
-	height: 74%;
+	height: 76%;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	overflow-y: auto;
 }
 
 .tab {
-	border-bottom: 1px solid rgba(255,255,255,0.05);
+	background: #7c344d;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -207,7 +210,7 @@ form {
 }
 
 .tab a {
-	color: white;
+	color: #d898ae;
 	font-weight: normal;
 	text-decoration: none;
 	font-size: 14px;
@@ -221,9 +224,8 @@ form {
 }
 
 .tab .active {
-	color: white;
-	font-weight: bold;
-	background: #34548e;
+	color: #95c5ab;
+	background: #2e6e4c;
 }
 
 .tab .visage::before {
@@ -258,7 +260,7 @@ form {
 
 .block .group {
 	padding: 15px 30px;
-	border-bottom: 1px solid rgba(255,255,255,0.1);
+	border-bottom: 1px solid #40475c;
 }
 
 .block .group:last-child {
@@ -266,7 +268,7 @@ form {
 }
 
 .block h2 {
-	color: rgba(255,255,255,0.5);
+	color: #fff;
 	font-size: 12px;
 	font-weight: normal;
 	text-transform: uppercase;
@@ -282,15 +284,15 @@ form {
 	font-size: 11px;
 	text-transform: uppercase;
 	letter-spacing: 2px;
-	color: rgba(255,255,255,0.7);
+	color: #c0c0c0;
 }
 
 .block .input .label-value {
 	position: absolute;
-	top: 0px;
-	font-size: 14px;
-	color: white;
-	right: 0px;
+	top: 8px;
+	font-size: 13px;
+	color: #c0c0c0;
+	right: 5px;
 	opacity: .5;
 }
 
@@ -298,7 +300,8 @@ form {
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	padding: 12px 15px 15px;
-	background-color: rgba(56,58,64,0.6);
+	background: #9b9a9a;
+	border-radius: 4px;
 }
 
 .block .input .type-range .arrow {
@@ -339,15 +342,15 @@ form {
 }
 
 .block .input .type-img label:nth-child(4n) .img {
-	border-right: 1px solid #3d3d3d;
+	border-right: 1px solid #4b536b;
 }
 
 .block .input .type-img .img {
 	width: 100%;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
-	border-top: 1px solid #3d3d3d;
-	border-left: 1px solid #3d3d3d;
+	border-top: 1px solid #4b536b;
+	border-left: 1px solid #4b536b;
 }
 
 .block .input .type-img .img img {
@@ -363,7 +366,7 @@ form {
 	right: 5px;
 	width: 10px;
 	height: 10px;
-	background: white url("assets/radio-check-black.png") no-repeat center center;
+	background: #c0c0c0 url("assets/radio-check-black.png") no-repeat center center;
 	padding: 4px;
 	background-size: 8px 6px;
 	-webkit-transition: all .15s ease-in-out;
@@ -372,7 +375,7 @@ form {
 }
 
 .block .input .type-img input[type="radio"]:checked + .img {
-	border: 2px solid white;
+	border: 2px solid #c0c0c0;
 }
 
 .block .input .type-img input[type="radio"]:checked + .img:after {
@@ -394,13 +397,13 @@ form {
 
 .submit {
 	width: 420px;
-	height: 100px;
+	height: 70px;
 	display: block;
 	border: none;
-	background-color: #34548e;
+	background-color: #2e6e4c;
 	font-size: 20px;
 	line-height: 70px;
-	color: white;
+	color: #95c5ab;
 	position: fixed;
 	bottom: 0px;
 	z-index: 100;
@@ -410,53 +413,5 @@ form {
 }
 
 .submit:hover {
-	background-color: #34548e;
-}
-
-.popup {
-	bottom: 10px;
-	left: 50%;
-	color: rgba(255,255,255,0.7);
-	width: 350px;
-	height: 100px;
-	display: none;
-	overflow: auto;
-	text-align: center;
-	position: absolute;
-	padding: 30px 50px;
-	transform: translate(-50%,-50%);
-	background-color: rgba(24,27,32,0.9);
-}
-
-.popup p {
-	margin-bottom: 10px;
-}
-
-.popup .buttons {
-	width: 100%;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-	-webkit-box-align: start;
-	-ms-flex-align: start;
-	align-items: flex-start;
-}
-
-.popup .buttons .button {
-	background-color: #1e3358;
-	text-align: center;
-	vertical-align: middle;
-	width: 80px;
-	height: 50px;
-	margin: 10px 10px 0;
-	padding: 0 10px;
-	color: rgba(255,255,255,0.7);
-	line-height: 45px;
-}
-
-.popup .buttons .yes {
-	background-color: #34548e;
+	background-color: #39875e;
 }
