--- a/server/resources/[vrp]/hud/web-side/style.css
+++ b/server/resources/[vrp]/hud/web-side/style.css
@@ -1,18 +1,38 @@
 html,body {
+	margin: 0;
+	padding: 0;
 	font-size: 13px;
 	overflow: hidden;
 	background: transparent;
 	font-family: "Roboto",Arial,Helvetica,sans-serif;
 }
 
+#saltyScreen {
+	display: flex;
+	color: #ffb400;
+	padding: 20px 0;
+	letter-spacing: 2px;
+	align-items: flex-end;
+	justify-content: center;
+	text-transform: uppercase;
+	background: rgba(0,0,0,0.75);
+}
+
 #displayLogo {
-	top: 50px;
-	right: 50px;
+	top: 75px;
+	right: 75px;
 	width: 101px;
 	height: 78px;
 	opacity: 0.5;
 	position: absolute !important;
+	animation: creative 10s ease-out infinite;
 	background: url("logo.png") no-repeat;
+}
+
+@keyframes creative {
+	10%,100% {
+		transform: rotateY(360deg);
+	}
 }
 
 #displayHud {
@@ -35,18 +55,26 @@ html,body {
 #displayMiddle {
 	float: right;
 	color: #c6c6c6;
+	padding: 15px 0;
+	font-size: 10px;
 	min-width: 400px;
 	max-width: 400px;
 	text-align: right;
 	letter-spacing: 0.5px;
-	padding: 10px 10px 20px;
 	text-shadow: 1px 1px #000;
 }
 
 #displayMiddle s {
-	opacity: 0.75;
+	opacity: 0.50;
 	padding: 0 10px;
 	text-decoration: none;
+}
+
+#displayMiddle text {
+	padding: 4px 15px;
+	border-radius: 10px;
+	text-transform: uppercase;
+	background: rgba(0,0,0,0.5);
 }
 
 #displayBottom {
@@ -69,12 +97,12 @@ svg {
 	margin-right: 5px;
 	position: relative;
 	border-radius: 100%;
-	border: 4px solid rgba(204,204,204,0.25);
+	border: 3px solid rgba(215,215,215,0.35);
 }
 
 #progressDisplay {
-	stroke: #ccc;
-	stroke-width: 4;
+	stroke: #eee;
+	stroke-width: 3;
 	margin-left: 5px;
 	fill: transparent;
 	position: absolute;
@@ -96,12 +124,12 @@ svg {
 	margin-right: 5px;
 	position: relative;
 	border-radius: 100%;
-	border: 4px solid rgba(116,197,121,0.25);
+	border: 3px solid rgba(86,159,88,0.35);
 }
 
 .healthDisplay {
-	stroke: #5dab61;
-	stroke-width: 4;
+	stroke: #70cc72;
+	stroke-width: 3;
 	margin-left: 5px;
 	fill: transparent;
 	position: absolute;
@@ -125,12 +153,12 @@ svg {
 	margin-right: 5px;
 	position: relative;
 	border-radius: 100%;
-	border: 4px solid rgba(163,142,192,0.25);
+	border: 3px solid rgba(148,64,80,0.35);
 }
 
 .armourDisplay {
-	stroke: #c75094;
-	stroke-width: 4;
+	stroke: #b54f62;
+	stroke-width: 3;
 	margin-left: 5px;
 	fill: transparent;
 	position: absolute;
@@ -154,12 +182,12 @@ svg {
 	margin-right: 5px;
 	position: relative;
 	border-radius: 100%;
-	border: 4px solid rgba(115,170,231,0.25);
+	border: 3px solid rgba(80,122,179,0.35);
 }
 
 .waterDisplay {
-	stroke: #4c89cd;
-	stroke-width: 4;
+	stroke: #669ae1;
+	stroke-width: 3;
 	margin-left: 5px;
 	fill: transparent;
 	position: absolute;
@@ -183,12 +211,12 @@ svg {
 	margin-right: 5px;
 	position: relative;
 	border-radius: 100%;
-	border: 4px solid rgba(242,155,111,0.25);
+	border: 3px solid rgba(205,118,47,0.35);
 }
 
 .foodDisplay {
-	stroke: #dc7744;
-	stroke-width: 4;
+	stroke: #fc913a;
+	stroke-width: 3;
 	margin-left: 5px;
 	fill: transparent;
 	position: absolute;
@@ -212,12 +240,12 @@ svg {
 	margin-right: 5px;
 	position: relative;
 	border-radius: 100%;
-	border: 4px solid rgba(206,132,174,0.25);
+	border: 3px solid rgba(111,92,124,0.35);
 }
 
 .stressDisplay {
-	stroke: #79608a;
-	stroke-width: 4;
+	stroke: #947aa5;
+	stroke-width: 3;
 	margin-left: 5px;
 	fill: transparent;
 	position: absolute;
@@ -241,12 +269,12 @@ svg {
 	margin-right: 5px;
 	position: relative;
 	border-radius: 100%;
-	border: 4px solid rgba(151,166,193,0.25);
+	border: 3px solid rgba(85,94,111,0.35);
 }
 
 .oxigenDisplay {
 	stroke: #727e94;
-	stroke-width: 4;
+	stroke-width: 3;
 	margin-left: 5px;
 	fill: transparent;
 	position: absolute;
@@ -269,12 +297,12 @@ svg {
 	height: 28px;
 	position: relative;
 	border-radius: 100%;
-	border: 4px solid rgba(179,165,12,0.25);
+	border: 3px solid rgba(176,158,40,0.35);
 }
 
 .voiceDisplay {
-	stroke: #c4b408;
-	stroke-width: 4;
+	stroke: #d7c232;
+	stroke-width: 3;
 	margin-left: 5px;
 	fill: transparent;
 	position: absolute;
@@ -301,57 +329,25 @@ svg {
 	border-radius: 100%;
 	text-align: center;
 
-	background-size: 86% !important;
 	background-position: center !important;
 	background-repeat: no-repeat !important;
 }
 
-#hardBeltOff {
+#seatBelt, #hardBelt {
 	float: right;
 	display: none;
 	color: #939393;
 	font-size: 11px;
 	font-weight: 300;
 	line-height: 12px;
+	padding-top: 18px;
 	padding-left: 15px;
 	letter-spacing: 0.5px;
 	text-shadow: 1px 1px #000;
 }
 
-#hardBeltOn {
-	float: right;
-	display: none;
-	color: #939393;
-	font-size: 11px;
-	font-weight: 300;
-	line-height: 12px;
-	padding-left: 15px;
-	letter-spacing: 0.5px;
-	text-shadow: 1px 1px #000;
-}
-
-#seatBeltOff {
-	float: right;
-	display: none;
-	color: #939393;
-	font-size: 11px;
-	font-weight: 300;
-	line-height: 12px;
-	padding-left: 15px;
-	letter-spacing: 0.5px;
-	text-shadow: 1px 1px #000;
-}
-
-#seatBeltOn {
-	float: right;
-	display: none;
-	color: #939393;
-	font-size: 11px;
-	font-weight: 300;
-	line-height: 12px;
-	padding-top: 15px	padding-left: 15px;
-	letter-spacing: 0.5px;
-	text-shadow: 1px 1px #000;
+#seatBelt img, #hardBelt img {
+	margin-top: -14px;
 }
 
 #mph {
@@ -384,7 +380,7 @@ svg {
 #movieTop {
 	top: 0;
 	left: 0;
-	width: 100%;
+	width: 100vw;
 	height: 12%;
 	display: none;
 	background: #000;
@@ -394,8 +390,8 @@ svg {
 #movieBottom {
 	left: 0;
 	bottom: 0;
-	width: 100%;
-	height: 12%;
+	width: 100vw;
+	height: 12vw;
 	display: none;
 	background: #000;
 	position: absolute !important;
@@ -404,8 +400,8 @@ svg {
 #hoodDisplay {
 	top: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 	display: none;
 	background: #000;
 	position: absolute !important;
