--- a/server/resources/[vrp]/notify/web-side/style.css
+++ b/server/resources/[vrp]/notify/web-side/style.css
@@ -12,13 +12,13 @@ body {
 	right: 50px;
 	bottom: 200px;
 	display: flex;
+	color: #c6c6c6;
 	font-size: 13px;
-	max-width: 435px;
+	max-width: 375px;
 	overflow: hidden;
 	letter-spacing: .5px;
 	align-items: flex-end;
 	flex-direction: column;
-	color: rgba(255,255,255,0.6);
 	position: absolute !important;
 	font-family: "Roboto",Arial,Helvetica,sans-serif;
 }
@@ -29,85 +29,57 @@ body {
 }
 
 #notifications div {
-	color: #b4b4b4;
+	color: #c6c6c6;
 	margin-top: 10px;
 	line-height: 16px;
 	border-radius: 4px;
+	text-shadow: 1px 1px #000;
 	padding: 15px 20px 15px 45px;
 }
 
 #verde {
-	background: rgba(34,34,34,0.75) url("images/check.png") no-repeat center left 11px;
-	/*border-bottom: 3px solid #a3c846;*/
+	background: rgba(0,0,0,0.5) url("images/check.png") no-repeat center left 11px;
 }
 
 #vermelho {
-	background: rgba(34,34,34,0.75) url("images/cancel.png") no-repeat center left 11px;
-	/*border-bottom: 3px solid #e62441;*/
+	background: rgba(0,0,0,0.5) url("images/cancel.png") no-repeat center left 11px;
 }
 
 #blood {
-	background: rgba(34,34,34,0.75) url("images/blood.png") no-repeat center left 11px;
-	/*border-bottom: 3px solid #e62441;*/
+	background: rgba(0,0,0,0.5) url("images/blood.png") no-repeat center left 11px;
 }
 
 #hunger {
-	background: rgba(34,34,34,0.75) url("images/hunger.png") no-repeat center left 11px;
-	/*border-bottom: 3px solid #f29b6f;*/
+	background: rgba(0,0,0,0.5) url("images/hunger.png") no-repeat center left 11px;
 }
 
 #thirst {
-	background: rgba(34,34,34,0.75) url("images/thirst.png") no-repeat center left 11px;
-	/*border-bottom: 3px solid #73aae7;*/
-}
-
-#stress {
-	background: rgba(34,34,34,0.75) url("images/stress.png") no-repeat center left 11px;
-	/*border-bottom: 3px solid #c45895;*/
+	background: rgba(0,0,0,0.5) url("images/thirst.png") no-repeat center left 11px;
 }
 
 #azul {
-	background: rgba(34,34,34,0.75) url("images/ring.png") no-repeat center left 11px;
-	/*border-bottom: 3px solid #6fa9dc;*/
+	background: rgba(0,0,0,0.5) url("images/ring.png") no-repeat center left 11px;
 }
 
 #amarelo {
-	background: rgba(34,34,34,0.75) url("images/important.png") no-repeat center left 11px;
-	/*border-bottom: 3px solid #ffb400;*/
-}
-
-#roxo {
-	background: rgba(34,34,34,0.75) url("images/announce.png") no-repeat center left 11px;
-	/*border-bottom: 3px solid #7b68ac;*/
-}
-
-#rosa {
-	background: rgba(34,34,34,0.75) url("images/social.png") no-repeat center left 11px;
-	/*border-bottom: 3px solid #d54867;*/
+	background: rgba(0,0,0,0.5) url("images/important.png") no-repeat center left 11px;
 }
 
 #locked {
-	background: rgba(34,34,34,0.75) url("images/locked.png") no-repeat center left 11px;
-	/*border-bottom: 3px solid #6eb969;*/
-}
-
-#twitter {
-	background: rgba(34,34,34,0.75) url("images/twitter.png") no-repeat center left 11px;
-	/*border-bottom: 3px solid #3f4d72;*/
+	background: rgba(0,0,0,0.5) url("images/locked.png") no-repeat center left 11px;
 }
 
 #unlocked {
-	background: rgba(34,34,34,0.75) url("images/unlocked.png") no-repeat center left 11px;
-	/*border-bottom: 3px solid #e62441;*/
+	background: rgba(0,0,0,0.5) url("images/unlocked.png") no-repeat center left 11px;
 }
 
 #default {
-	/*border-bottom: 3px solid #91a2ac;*/
-	background: rgba(34,34,34,0.75);
 	padding: 15px 20px !important;
 	line-height: 20px !important;
+	background: rgba(0,0,0,0.5);
 }
 
 #default line {
+	text-shadow: 0 0 transparent !important;
 	color: rgba(255,255,255,0.1);
 }
