--- a/server/resources/[Essentials]/vrp/web-side/design.css
+++ b/server/resources/[Essentials]/vrp/web-side/design.css
@@ -15,15 +15,15 @@ html,body {
 }
 
 .wprompt {
-	font-family: "Roboto",Arial,Helvetica,sans-serif;
-	position: absolute;
-	background-color: rgba(0,0,0,0.7);
 	color: #fff;
 	width: 600px;
 	height: 150px;
 	display: flex;
-	flex-direction: column;
+	position: absolute;
 	padding: 10px 15px;
+	flex-direction: column;
+	background-color: rgba(0,0,0,0.7);
+	font-family: "Roboto",Arial,Helvetica,sans-serif;
 }
 
 .wprompt h1 {
@@ -33,16 +33,16 @@ html,body {
 }
 
 .wprompt textarea {
+	flex: 1;
+	color: #ccc;
+	width: 100%;
+	resize: none;
+	padding: 10px;
+	font-size: 15px;
+	box-sizing: border-box;
 	outline: none !important;
 	background-color: rgba(0,0,0,0.5);
 	border: 1px solid rgba(255,255,255,0.2);
-	flex: 1;
-	color: #ccc;
-	font-size: 15px;
-	width: 100%;
-	padding: 10px;
-	resize: none;
-	box-sizing: border-box;
 }
 
 .wprompt textarea:focus {
@@ -77,7 +77,7 @@ html,body {
 }
 
 #NotifyBackground green {
-	color: #a0ceb6;
+	color: #2e6e4c;
 }
 
 #NotifyBackground b {
@@ -114,4 +114,31 @@ html,body {
 	font-size: 13px;
 	font-style: normal;
 	letter-spacing: 2px;
+}
+
+#statusDiv {
+	left: 35px;
+	bottom: 35px;
+	font-size: 11px;
+	max-width: 300px;
+	line-height: 16px;
+	position: absolute;
+	text-shadow: 1px 1px #000;
+	color: rgba(255,255,255,0.75);
+	font-family: "Roboto",Arial,Helvetica,sans-serif;
+}
+
+#wantedDiv, #reposeDiv {
+	float: left;
+	padding: 15px;
+	display: none;
+	max-width: 235px;
+	margin-top: 10px;
+	border-radius: 4px;
+	background: rgba(0,0,0,0.5);
+}
+
+#reposeDiv b, #wantedDiv b {
+	color: #ffb400;
+	font-weight: 300;
 }
