--- a/server/resources/[vrp]/bank/web-side/css.css
+++ b/server/resources/[vrp]/bank/web-side/css.css
@@ -1,4 +1,4 @@
-body,td,th { font-size: 12px; font-family: Arial,Helvetica,sans-serif; color: #888; cursor: default; vertical-align: baseline; outline: 0; line-height: 1; margin: 0; padding: 0; word-wrap: break-word; }
+body,td,th { font-size: 12px; font-family: Arial,Helvetica,sans-serif; color: #313131; cursor: default; vertical-align: baseline; outline: 0; line-height: 1; margin: 0; padding: 0; word-wrap: break-word; }
 a,a:link,a:visited,a:active,a:hover { font-family: Arial,Helvetica,sans-serif; font-size: 12px; color: #888; text-decoration: none; }
 div,span,applet,object,iframe,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr { border:0; outline:0; font-size:100%; vertical-align:baseline; background:transparent; margin:0; padding:0; }
 :focus { outline:0; }
@@ -65,11 +65,11 @@ button:hover {
 #bank-left a {
 	width: 240px;
 	padding: 15px 20px;
-	background-image: linear-gradient(#f3a000,#d57800);
+	background-color: #008844;
 	float: left;
-	color: #523600;
+	color: #fff;
 	margin: 0 0 10px 0;
-	border-radius: 2px;
+	border-radius: 4px;
 }
 
 #bank-left texto {
@@ -138,7 +138,7 @@ button:hover {
 }
 
 .multas {
-	color: #155e39;
+	color: #01562c;
 	font-weight: 700;
 	position: absolute;
 	background: #2dc177;
@@ -152,7 +152,7 @@ button:hover {
 }
 
 .salario {
-	color: #155e39;
+	color: #01562c;
 	font-weight: 700;
 	position: absolute;
 	background: #2dc177;
@@ -185,7 +185,7 @@ button:hover {
 	padding: 20px 20px;
 	background: #fff;
 	margin-right: 11px;
-	border-radius: 2px;
+	border-radius: 4px;
 	box-shadow: 1px 1px rgba(0,0,0,0.1);
 }
 
@@ -197,7 +197,7 @@ button:hover {
 	font-size: 20px;
 	margin-right: 10px;
 	background: rgba(0,0,0,0.1);
-	border-radius: 2px;
+	border-radius: 4px;
 }
 
 .depositar, .sacar {
@@ -208,7 +208,7 @@ button:hover {
 	background: #2dc177;
 	padding: 15px 10px;
 	font-size: 20px;
-	border-radius: 2px;
+	border-radius: 4px;
 	float: left;
 }
 
@@ -217,7 +217,7 @@ button:hover {
 	width: 625px;
 	padding: 20px;
 	background: #fff;
-	border-radius: 2px;
+	border-radius: 4px;
 }
 
 .menu-space {
