--- a/server/resources/[vrp]/taskbar/web-side/css.css
+++ b/server/resources/[vrp]/taskbar/web-side/css.css
@@ -1,32 +1,27 @@
 .nicesexytext {
 	width: 100%;
 	z-index: 999;
-	color: #E6E6E5;
-	font-size: 10px;
+	color: #c9d1ee;
+	font-size: 11px;
 	text-align: center;
 	position: absolute;
 	margin: 13px auto 0;
-	letter-spacing: 3.5px;
-	color: rgba(255,255,255,0.7);
-	text-shadow: 1px 1px rgba(0,0,0,0.7);
+	letter-spacing: 4.5px;
+	text-shadow: 1px 1px #000;
 	font-family: "Roboto",Arial,Helvetica,sans-serif;
-}
-
-.nicesexytext b {
-	font-weight: 300;
 }
 
 .divwrap {
 	left: 50%;
-	bottom: 20%;
+	bottom: 10%;
 	width: 300px;
 	height: 40px;
 	display: none;
 	overflow: hidden;
 	position: absolute;
-	border: 2px solid #E6E6E5;
+	background: #33384b;
+	border: 1px solid #949fc5;
 	transform: translate(-50%,-50%);
-	background-color: rgba(0,0,0,0.6);
 }
 
 .skillprogress {
@@ -34,12 +29,11 @@
 	width: 10%;
 	z-index: 99;
 	height: 100%;
-	opacity: 0.8;
 	padding-top: 1%;
+	background: #fff;
 	position: absolute;
-	background-color: rgba(255,250,250,0.4);
-	border-left: 2px solid rgba(255,250,250,0.9);
-	border-right: 2px solid rgba(255,250,250,0.9);
+	border-left: 1px solid #949fc5;
+	border-right: 1px solid #949fc5;
 }
 
 .progress {
@@ -63,5 +57,5 @@
 	overflow: hidden;
 	position: relative;
 	position: absolute;
-	background-color: rgba(50,120,50,0.9);
+	background-color: #2e6e4c;
 }
