--- a/server/resources/[vrp]/chat/html/index.css
+++ b/server/resources/[vrp]/chat/html/index.css
@@ -3,12 +3,13 @@
 }
 
 .color-1 {
-	color: #dfdfdf;
+	color: #ebebeb;
 	font-size: 14px;
 }
 
 .color-2 {
-	color: #8bcb00;
+	color: #e0c117;
+	font-size: 14px;
 }
 
 .color-3 {
